# axum-production-ready-security

./: Cargo.toml  README.MD
src/: lib.rs
src/security/: mod.rs
src/security/jwt/: jwt.rs  mod.rs
src/security/middlewares/: authentication.rs  mod.rs
src/security/models/: mod.rs  security.rs  security_error.rs
